--- a/interface/frontend/dmxMaster/src/app/components/mode-selector/mode-selector.component.css
+++ b/interface/frontend/dmxMaster/src/app/components/mode-selector/mode-selector.component.css
@@ -1,16 +1,23 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .mode-container {
   display: flex;
   justify-content: center;
   margin-top: 20px;
 }
 
-.mode-container button {
+.mode-button {
   width: 100px;
   height: 100px;
   margin-right: 15px;
   font-weight: bold;
+  background-color: #777777;
   cursor: pointer;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 10px;
 }
 
@@ -18,6 +25,28 @@
   margin-right: 0;
 }
 
+.sync-button {
+  margin-right: 0;
+  margin-top: 10px;
+  height: 50px;
+}
+
 .active {
   background-color: green;
+}
+
+@keyframes blink {
+
+  0%,
+  100% {
+    background-color: none;
+  }
+
+  50% {
+    background-color: rgb(229, 229, 23);
+  }
+}
+
+.blinking-button {
+  animation: blink 1s steps(1, start) infinite;
 }
